src/objects/TR1__External_Search_Result__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Availability__c</fullName>
        <label>Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ChildCount__c</fullName>
        <label>ChildCount</label>
        <summaryForeignKey>TR1__External_Search_Junction__c.TR1__External_Search_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Name__c</fullName>
        <formula>TR1__Contact__r.LastName+&apos;, &apos;+ TR1__Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>External Search Results</relationshipLabel>
        <relationshipName>External_Search_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__CreatedDate_Snippet__c</fullName>
        <label>CreatedDate(Snippet)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Degree_Snippet__c</fullName>
        <label>Degree(Snippet)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Distributed_ID__c</fullName>
        <label>Distributed ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Download_URL__c</fullName>
        <label>Download URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__External_Search__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Search</label>
        <referenceTo>TR1__ExternalSearch__c</referenceTo>
        <relationshipLabel>External Search Results</relationshipLabel>
        <relationshipName>External_Search_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Handle__c</fullName>
        <label>Handle</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Board__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Board</label>
        <referenceTo>TR1__Job_Board__c</referenceTo>
        <relationshipLabel>External Search Results</relationshipLabel>
        <relationshipName>External_Search_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__LastJobTitle_Snippet__c</fullName>
        <label>LastJobTitle(Snippet)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Last_Position__c</fullName>
        <label>Last Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Location_Snippet__c</fullName>
        <label>Location(Snippet)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Rank__c</fullName>
        <label>Rank</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Result_Id__c</fullName>
        <externalId>true</externalId>
        <label>Result Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Resume_Search_Id__c</fullName>
        <formula>CASESAFEID(TR1__External_Search__r.TR1__ResumeSearch__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resume Search Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Salary__c</fullName>
        <label>Salary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Score__c</fullName>
        <label>Score</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Skills_Snippet__c</fullName>
        <label>Skills(Snippet)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Snippets__c</fullName>
        <label>Snippets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Source__c</fullName>
        <label>Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                    <default>true</default>
                    <label>Ready</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Summary_Snippet__c</fullName>
        <label>Summary(Snippet)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__UI_Id__c</fullName>
        <label>UI Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Update__c</fullName>
        <label>Last Updated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>External Search Result</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__Result_Id__c</columns>
        <columns>TR1__Name__c</columns>
        <columns>TR1__Job_Board__c</columns>
        <columns>TR1__Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TR1__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RES-{0000000000}</displayFormat>
        <label>External Search Results Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Search Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>